--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ edition = "2021"
 # parquet = "11"
 arrow = "11"
 arrow2 = { version = "0.10.1", features = ["io_parquet", "io_parquet_compression"] }
-polars = { version = "0.20", features = ["parquet", "lazy"]}
+polars = { version = "0.20", features = ["parquet", "lazy"] }
+# no parquet or arrow support at all
+# peroxide = { version = "0.30", features = ["nc", "csv"] }
